--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-11 Tue 17:04]
+#+CAPTION: Clock summary at [2016-10-11 Tue 17:13]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:03* |       |      | 100.0 |
+| *Total time*                                                                | *15:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:03   |       |      | 100.0 |
-| Active                                                                      |         | 15:03 |      | 100.0 |
+| Stories                                                                     | 15:11   |       |      | 100.0 |
+| Active                                                                      |         | 15:11 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.1 |
 | COMPLETED Improve bintray support                                           |         |       | 0:26 |   2.9 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |   8.5 |
-| COMPLETED Remove any remnants of annotations from quilt                     |         |       | 0:05 |   0.6 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  26.7 |
+| COMPLETED Remove any remnants of annotations from quilt                     |         |       | 0:05 |   0.5 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  26.5 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.0 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   7.9 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 7:04 |  47.0 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   7.8 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 7:12 |  47.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-11 Tue 17:06]--[2016-10-11 Tue 17:13] =>  0:07
     CLOCK: [2016-10-11 Tue 17:04]--[2016-10-11 Tue 17:05] =>  0:01
     CLOCK: [2016-10-11 Tue 16:49]--[2016-10-11 Tue 17:03] =>  0:14
     CLOCK: [2016-10-11 Tue 15:52]--[2016-10-11 Tue 16:48] =>  0:56
@@ -189,6 +190,8 @@ anticipated. The objective of dynamic is to provide a way to annotate
 objects in yarn (well, anywhere in theory). Interpreting some
 [[https://en.wikipedia.org/wiki/Text_annotation][annotation terminology]] fairly liberally we have:
 
+Done:
+
 - dynamic -> annotations
 - fields folder renamed to annotations. Note: it is annotations and
   not annotation_types because we will also store profiles
@@ -203,7 +206,12 @@ objects in yarn (well, anywhere in theory). Interpreting some
   between the annotation and the yarn element it annotates. Fields
   become the body of the annotation.
 - workflow: annotation groups factory. Takes in scribble groups.
-- field instance -> entry.
+
+Todo:
+
+- field instance -> merge this with value; there is no reason to have
+  two classes. We need to look at the factories and see if we can
+  merge them together.
 - field instance definition -> entry template.
 - field definition -> split into type and type template. JSON file can
   contain both. Add some kind of meta-data to figure out the type.
