--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-11 Tue 17:13]
+#+CAPTION: Clock summary at [2016-10-11 Tue 20:43]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:11* |       |      | 100.0 |
+| *Total time*                                                                | *16:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:11   |       |      | 100.0 |
-| Active                                                                      |         | 15:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   2.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.1 |
-| COMPLETED Improve bintray support                                           |         |       | 0:26 |   2.9 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |   8.5 |
+| Stories                                                                     | 16:09   |       |      | 100.0 |
+| Active                                                                      |         | 16:09 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:22 |   2.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.0 |
+| COMPLETED Improve bintray support                                           |         |       | 0:26 |   2.7 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       | 1:17 |   7.9 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       | 0:05 |   0.5 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  26.5 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   2.0 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   7.8 |
-| STARTED Clean up terminology in dynamic                                     |         |       | 7:12 |  47.4 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       | 4:01 |  24.9 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       | 0:18 |   1.9 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       | 1:11 |   7.3 |
+| STARTED Clean up terminology in dynamic                                     |         |       | 8:10 |  50.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ There were a couple of instances left out in the configuration
 refactor, in yarn.
 
 *** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-11 Tue 19:45]--[2016-10-11 Tue 20:43] =>  0:58
     CLOCK: [2016-10-11 Tue 17:06]--[2016-10-11 Tue 17:13] =>  0:07
     CLOCK: [2016-10-11 Tue 17:04]--[2016-10-11 Tue 17:05] =>  0:01
     CLOCK: [2016-10-11 Tue 16:49]--[2016-10-11 Tue 17:03] =>  0:14
