--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 12:35]
+#+CAPTION: Clock summary at [2016-10-12 Wed 14:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *23:26* |       |       | 100.0 |
+| *Total time*                                                                | *23:31* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 23:26   |       |       | 100.0 |
-| Active                                                                      |         | 23:26 |       | 100.0 |
+| Stories                                                                     | 23:31   |       |       | 100.0 |
+| Active                                                                      |         | 23:31 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.3 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.8 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.4 |
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  17.1 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.3 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   5.0 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  64.9 |
-| STARTED Rewrite profile support                                             |         |       |  0:15 |   1.1 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  64.6 |
+| STARTED Rewrite profile support                                             |         |       |  0:20 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -252,6 +252,7 @@ Sound on compilations:
 : || ogg123 -q  /usr/share/sounds/gnome/default/alerts/drip.ogg
 
 *** STARTED Rewrite profile support                                   :story:
+    CLOCK: [2016-10-12 Wed 12:35]--[2016-10-12 Wed 12:40] =>  0:05
     CLOCK: [2016-10-12 Wed 12:15]--[2016-10-12 Wed 12:30] =>  0:20
 
 Our first stab at implementing profiles was a valiant effort but sadly
