--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,24 +14,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-12 Wed 22:31]
+#+CAPTION: Clock summary at [2016-10-13 Thu 11:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *25:41* |       |       | 100.0 |
+| *Total time*                                                                | *27:40* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 25:41   |       |       | 100.0 |
-| Active                                                                      |         | 25:41 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.2 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.7 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   5.0 |
+| Stories                                                                     | 27:40   |       |       | 100.0 |
+| Active                                                                      |         | 27:40 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.1 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.6 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   4.6 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.3 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  15.6 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.2 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   4.6 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  59.2 |
-| STARTED Rewrite profile support                                             |         |       |  2:30 |   9.7 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  14.5 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.1 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   4.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  54.9 |
+| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.7 |
+| STARTED Create a ownership hierarchy repository                             |         |       |  0:29 |   1.7 |
+| STARTED Rewrite profile support                                             |         |       |  3:31 |  12.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -259,6 +261,7 @@ We need to do a minor cosmetic tidy-up of diagram after all the
 shuffling around we did on the previous sprint.
 
 *** STARTED Create a ownership hierarchy repository                   :story:
+    CLOCK: [2016-10-13 Thu 11:33]--[2016-10-13 Thu 11:40] =>  0:07
     CLOCK: [2016-10-13 Thu 11:10]--[2016-10-13 Thu 11:32] =>  0:22
 
 
