--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,26 +14,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-13 Thu 11:40]
+#+CAPTION: Clock summary at [2016-10-13 Thu 13:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *27:40* |       |       | 100.0 |
+| *Total time*                                                                | *28:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 27:40   |       |       | 100.0 |
-| Active                                                                      |         | 27:40 |       | 100.0 |
+| Stories                                                                     | 28:54   |       |       | 100.0 |
+| Active                                                                      |         | 28:54 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.1 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.6 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   4.6 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.5 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   4.4 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.3 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  14.5 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.1 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   4.3 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  54.9 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  13.9 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.0 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   4.1 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  52.6 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.7 |
-| STARTED Create a ownership hierarchy repository                             |         |       |  0:29 |   1.7 |
-| STARTED Rewrite profile support                                             |         |       |  3:31 |  12.7 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   5.9 |
+| STARTED Rewrite profile support                                             |         |       |  3:31 |  12.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -260,10 +260,11 @@ Sound on compilations:
 We need to do a minor cosmetic tidy-up of diagram after all the
 shuffling around we did on the previous sprint.
 
-*** STARTED Create a ownership hierarchy repository                   :story:
+*** COMPLETED Create a ownership hierarchy repository                 :story:
+    CLOSED: [2016-10-13 Thu 13:32]
+    CLOCK: [2016-10-13 Thu 12:18]--[2016-10-13 Thu 13:32] =>  1:14
     CLOCK: [2016-10-13 Thu 11:33]--[2016-10-13 Thu 11:40] =>  0:07
     CLOCK: [2016-10-13 Thu 11:10]--[2016-10-13 Thu 11:32] =>  0:22
-
 
 At present we are recomputing the available facets etc in a few
 places. In reality we could just have a repository with all of these
