--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,26 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-13 Thu 13:32]
+#+CAPTION: Clock summary at [2016-10-13 Thu 13:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:54* |       |       | 100.0 |
+| *Total time*                                                                | *29:04* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:54   |       |       | 100.0 |
-| Active                                                                      |         | 28:54 |       | 100.0 |
+| Stories                                                                     | 29:04   |       |       | 100.0 |
+| Active                                                                      |         | 29:04 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   1.1 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.5 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   4.4 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.3 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  13.9 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  13.8 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   1.0 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   4.1 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  52.6 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  52.3 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.7 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   5.9 |
-| STARTED Rewrite profile support                                             |         |       |  3:31 |  12.2 |
+| COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.6 |
+| STARTED Rewrite profile support                                             |         |       |  3:31 |  12.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -269,6 +270,15 @@ shuffling around we did on the previous sprint.
 At present we are recomputing the available facets etc in a few
 places. In reality we could just have a repository with all of these
 queries pre-computed.
+
+*** COMPLETED Use vector of elements in model                         :story:
+    CLOSED: [2016-10-13 Thu 13:43]
+    CLOCK: [2016-10-13 Thu 13:33]--[2016-10-13 Thu 13:43] =>  0:10
+
+Since we already know the size of the model up front we should just
+use a vector instead of a list.
+
+After the change, performance did not move very much.
 
 *** STARTED Rewrite profile support                                   :story:
     CLOCK: [2016-10-13 Thu 09:38]--[2016-10-13 Thu 10:39] =>  1:01
